 * New INI option, info.tidy.xhtml (default: false) which tells tidy to generate xhtml output (htmleditorkit not really happy with xhtml)
 * New INI option html.css to set default css for html rendering.  relative to stylesheets directory (or abs)
  * default=streambaby.css, which doesn't exist by default (and so won't be loaded)

 
 ===V0.20===
 * Added initial support for .tivo files
  * Thanks to work by davidblackledge & wmcbrine
  * Due to streaming bandwidth issues, tivo may have a hard time keeping up.
  * No support for random positioning within a .tivo file--  Must always start from the beginning.
  * Because of the above, there is no support for rebuffering at 1.1G point (and .tivo files are usually large)
  * Due to all of the above, streaming .tivo files is not really that useful ;-)
 * Fixed audio channels parsing support for ffmpegexe
 * Modified MP4 streaming code to not interleave if initial audio/video chunks are with 4 megabytes of each other.
 * If MP4 pseudo-streaming can't perform the correct positioning, try again at beginning
  * This usually happens at the beginning of a file anyway
 * Drop -ac parameter from default for ffmpegexe transcode
 * Moved all assets (icons/images) into asset directory
 * Changed icon theme.  Icons are searched in assets directory
 * Added icon/bkg config options icon.icon=, icon.folder=, icon.movie=  
  * Files are relative to the assets directory
 * Added new config option ignore.dotfiles.  Set to false if you want files/folders with a dot included
 * Added new config option remember.password.  Set to false to not remember password from session to session
 * Added support for testing-- ".raw" files
  * Will stream to tivo without any processing
  * Assumes video/mpeg for mimeType and Content-Type by default
  * if file videofile.raw.fmt exists, the first line is taken as the mime type to use, and the second as the Content-Type