@@ -5,6 +5,7 @@ import java.io.IOException;
 import java.io.StringReader;
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.util.Map;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -30,6 +31,7 @@ public class StandardMetadataModule extends BaseMetadataModule {
 
 	private static Pattern pyTivoPattern = Pattern.compile("^\\w+\\s+:\\s+.*");
 	private static Pattern pyTivoTitlePattern= Pattern.compile(".*^title\\s+:\\s+([^\n\r]+)$.*", Pattern.MULTILINE|Pattern.DOTALL);
+	private static Pattern urlSchemePattern = Pattern.compile("\\w+://.*");
 
 	private void setPyTivoTitle(String data, MetaData meta) {
 		Matcher m = pyTivoTitlePattern.matcher(data);
@@ -148,7 +150,53 @@ public class StandardMetadataModule extends BaseMetadataModule {
 		m.setImage(f);
 		return true;
 	}
+	
+	public boolean handleVidMeta(VideoInformation vi, MetaData m) {
+		Map<String, String> metaMap;
+		metaMap = vi.getMetadataMap();
+		if (metaMap.size() == 0)
+			return false;
+		if (metaMap.get("title") != null)
+			m.setTitle(metaMap.get("title"));
+		
+		StringBuffer data = new StringBuffer();
+		data.append("<meta>\n");
+		for (Map.Entry<String, String> e : metaMap.entrySet()) {
+			data.append("<" + e.getKey() + ">");
+			data.append("<![CDATA[");
+			data.append(e.getValue());
+			data.append("]]>");
+			data.append("</" + e.getKey() + ">");			
+		}
+		data.append("</meta>");
+		SAXSource source = new SAXSource(new InputSource(new StringReader(data.toString())));
+		return transform(m, source, StreamBabyConfig.cfgMetaXsl.getValue(), null);
+		
 
+	}
+
+	public boolean handleUrlMetadata(String urlData, MetaData m) {
+		String[] split = urlData.split("\r\n|\r|\n");
+		if (split.length == 0)
+			return false;
+		Matcher match = urlSchemePattern.matcher(split[0].toLowerCase());
+		if (match.matches()) {
+			m.setUrl(split[0]);
+			return true;
+		}
+		
+		for (String line : split) {
+			String es[] = line.split("=", 2);
+			if (es.length == 2) {
+				if (es[0].compareToIgnoreCase("url") == 0) {
+					m.setUrl(es[1]);
+					return true;
+				}
+			}
+		}
+		return false;
+
+	}
 	public boolean setMetadata(MetaData m, URI uri, VideoInformation vi) {
 		if (!Utils.isFile(uri))
 			return false;
@@ -170,6 +218,14 @@ public class StandardMetadataModule extends BaseMetadataModule {
 		String metaTxt = readMeta(m, f.getParentFile(), f.getName(), ".txt");
 		if (metaTxt != null && handleTxtMetadata(metaTxt, m))
 			return true;
+		
+		String metaUrl = readMeta(m, f.getParentFile(), f.getName(), ".url");
+		if (metaUrl != null && handleUrlMetadata(metaUrl, m))
+			return true;
+		
+		// do we have metadata from the video parser?
+		if (vi.getMetadataMap().size() > 0)
+			return handleVidMeta(vi, m);
 		return false;
 	}
 
