@@ -10,4 +10,4 @@
 # most people don't need to change this. 
 #ip=192.168.1.37
 # port to use
-port=7290
+#port=7290
